--- a/Mission06_sdcable/appsettings.json
+++ b/Mission06_sdcable/appsettings.json
@@ -8,6 +8,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DataConnection": "Data Source=MovieApp.sqlite"
+        "DataConnection": "Data Source=MovieApp.sqlite" /*Setting up my connection string*/
     }
 }
